# mdif

./: .gitignore  Dockerfile  README.md  build-win.bat  build.sh  clean.sh  library.json  library.properties
.github/workflows/: arduino_ci.yml  build_ci.yml
examples/aliased_circle/: aliased_circle.cpp  build.bat  build.sh
examples/generate_gradient/: build.bat  build.sh  generate_gradient.cpp  generate_gradient.ino
examples/grayscale_dump/: build.bat  build.sh  grayscale_dump  grayscale_dump.cpp  grayscale_dump.ino
examples/load_mdif/: build.bat  build.sh  load_mdif.cpp  load_mdif.ino
src/: mdif.cpp  mdif.h
tools/mdif_jpg/: build.bat  build.sh  mdif_jpg.cpp
tools/mdif_png/: build.bat  build.sh  mdif_png.cpp
tools/mdif_viewer_linux/: CMakeLists.txt  mdif_viewer.cpp  mdif_viewer_main.cpp
tools/mdif_viewer_win/: build.bat  build.sh  mdif_viewer.cpp
